networking/demo/local-resource/service_foo-bar-api.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: foo-bar-api
spec:
  ports:
  - name: https
    port: 80
    targetPort: 8000
  - name: grpc
    port: 80
    targetPort: 5678
  selector:
    app: foo-bar-api
status:
  loadBalancer: {}
