networking/demo/local-resource/ingressroute_foo-bar-api.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: foo-bar-api
spec:
  routes:
  - kind: Rule
    match: Host(`foo.com`) || Host(`bar.co`) && Path(`/foo`)
    services:
    - name: name
      port: 80
  - kind: Rule
    match: Host(`foo.com`) || Host(`bar.co`) && Path(`/bar`)
    services:
    - name: name
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: foo-bar-api
spec:
  routes:
  - kind: Rule
    match: Host(`foo-bar-api.internal.bukukas.k8s`)
    services:
    - name: name
      passHostHeader: true
      port: 5678
      scheme: h2c
